--- a/front/src/app/auth/login/login.component.html
+++ b/front/src/app/auth/login/login.component.html
@@ -10,7 +10,7 @@
   <!-- ? buttons -->
   <div class="flex flex-col items-center justify-center w-full h-1/2">
     <div class="w-1/2 text-center">
-      <ion-button *ngIf="!loading" expand="undefined" size="large" type="submit" [disabled]="loading">Connexion</ion-button>
+      <ion-button *ngIf="!loading" expand="undefined" size="large" type="submit" [disabled]="loading">Conhnexion</ion-button>
     </div>
     <ion-progress-bar *ngIf="loading" type="indeterminate" class="w-11/12"></ion-progress-bar>
     <div class="w-1/2 text-center">
