--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,3 +1,13 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>{{headerService.getHeaderTitle()}}</ion-title>
+      <ion-buttons *ngIf="!router.url.includes('login')" text-center>
+        <ion-back-button defaultHref="login" mode="ios"></ion-back-button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding">
+    <ion-router-outlet></ion-router-outlet>
+  </ion-content>
 </ion-app>
