--- a/front/src/app/components/pages/auth/register/register.component.html
+++ b/front/src/app/components/pages/auth/register/register.component.html
@@ -1,3 +1,30 @@
-<p>
-  register works!
-</p>
+<div class="h-full">
+  <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+    <ion-list lines="full">
+      <ion-item>
+        <ion-input label="Prénom" type="text" labelPlacement="floating"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input label="Nom" type="text" labelPlacement="floating"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input label="Email" type="email" labelPlacement="floating"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input label="Age" type="number" labelPlacement="floating"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input label="Mot de passe" type="password" labelPlacement="floating"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-input label="Répéter le mot de passe" type="password" labelPlacement="floating"></ion-input>
+      </ion-item>
+    </ion-list>
+    <div class="flex justify-center w-full pt-10">
+      <ion-button type="submit">Je crée mon compte</ion-button>
+    </div>
+  </form>
+  <div class="flex justify-center w-full h-1/3">
+    <ion-img [src]="notifyImg" class="w-60" ></ion-img>
+  </div>
+</div>
