--- a/front/src/app/components/pages/my-profile/my-profile.page.html
+++ b/front/src/app/components/pages/my-profile/my-profile.page.html
@@ -10,4 +10,5 @@
       <ion-title size="large">myProfile</ion-title>
     </ion-toolbar>
   </ion-header>
+  <ion-button (click)="logout()">logout</ion-button>
 </ion-content>
