--- a/front/src/app/components/pages/auth/register/register.component.html
+++ b/front/src/app/components/pages/auth/register/register.component.html
@@ -1,3 +1,4 @@
+<!-- ? header -->
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
@@ -6,8 +7,10 @@
     <ion-title>Je m'inscris</ion-title>
   </ion-toolbar>
 </ion-header>
+
 <ion-content>
   <div class="">
+    <!-- ? form -->
     <form [formGroup]="registerForm">
       <ion-list lines="full">
         <ion-item>
@@ -30,10 +33,16 @@
         </ion-item>
        
       </ion-list>
+
+      <!-- ? buttons -->
       <div class="flex justify-center w-full pt-10">
-        <ion-button (click)="onSubmit()" [disabled]="false">Je crée mon compte</ion-button>
+        <ion-button (click)="onSubmit()" *ngIf="!loading" [disabled]="registerForm.invalid">Je crée mon compte</ion-button>
+        <ion-progress-bar *ngIf="loading" type="indeterminate" class="w-11/12"></ion-progress-bar>
+
       </div>
     </form>
+
+    <!-- ? image -->
     <div class="flex justify-center w-full">
       <ion-img [src]="notifyImg" class="w-60"></ion-img>
     </div>
