--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,3 +1,7 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-content class="ion-padding">
+    <ion-nav>
+      <ion-router-outlet></ion-router-outlet>
+    </ion-nav>
+  </ion-content>
 </ion-app>
