✨ add creation of couple after mate selection

--- a/front/src/app/components/pages/auth/no-mate/no-mate.component.html
+++ b/front/src/app/components/pages/auth/no-mate/no-mate.component.html
@@ -30,7 +30,7 @@
     </ion-card-content>
   </ion-card>
   <ion-list class="transition-all ease-in-out" *ngIf="!loading && matesService.singleMates && matesService.singleMates.length > 0">
-    <ion-item button *ngFor="let singleMate of matesService.singleMates">
+    <ion-item [disabled]="singleMate.id === authService.currentUserSubject.getValue().id" button *ngFor="let singleMate of matesService.singleMates" (click)="onSelectItem(singleMate)">
       <ion-avatar slot="start">
         <img src="../../../../../assets/login-icons/home-bodies.png" />
       </ion-avatar>
