--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -8,17 +8,17 @@
 
     <ion-tab-button tab="calendars">
       <ion-img [src]="router.url.includes('calendars') ? calendarsOnIcon : calendarsOffIcon " class="w-1/3" />
-      <ion-label>Calendars</ion-label>
+      <ion-label>Calendriers</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="my-mate">
-      <ion-img [src]="router.url.includes('my-mate') ? myMateOnIcon : myMateOffIcon " class="w-1/3" />
-      <ion-label>My Mate</ion-label>
+    <ion-tab-button tab="my-couple">
+      <ion-img [src]="router.url.includes('my-couple') ? myCoupleOnIcon : myCoupleOffIcon " class="w-1/3" />
+      <ion-label>Mon couple</ion-label>
     </ion-tab-button>
     
     <ion-tab-button tab="my-profile">
       <ion-img [src]="router.url.includes('my-profile') ? myProfileOnIcon : myProfileOffIcon " class="w-1/3" />
-      <ion-label>My Profile</ion-label>
+      <ion-label>Mon profil</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
