--- a/front/src/app/components/pages/my-couple/my-couple.page.html
+++ b/front/src/app/components/pages/my-couple/my-couple.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>myMate</ion-title>
+    <ion-title>myCouple</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">myMate</ion-title>
+      <ion-title size="large">myCouple</ion-title>
     </ion-toolbar>
   </ion-header>
 </ion-content>
