✨ couple name feature on couple page

--- a/front/src/app/components/pages/auth/no-mate/no-mate.component.html
+++ b/front/src/app/components/pages/auth/no-mate/no-mate.component.html
@@ -8,7 +8,7 @@
 
 <!-- ? page content -->
 <ion-content>
-  <ion-segment [(ngModel)]="gender" (ngModelChange)="loadSingleMates(true)">
+  <ion-segment [(ngModel)]="gender" (ngModelChange)="loadSingleMates(true); onChangeGender()">
     <ion-segment-button value="male">
       <ion-label>Homme</ion-label>
     </ion-segment-button>
