--- a/front/src/app/components/pages/my-couple/my-couple.page.html
+++ b/front/src/app/components/pages/my-couple/my-couple.page.html
@@ -21,7 +21,7 @@
   <div class="flex justify-center w-full pt-5">
     <div class="relative w-40">
       <div class="h-40">
-        <img class="object-cover w-full h-full border rounded-full shadow-md border-cyan-200 shadow-cyan-100"
+        <img class="object-cover w-full h-full rounded-full"
           src="../../../../assets/test-icons/benji.png" />
         <div class="absolute top-0 left-0 bg-white border-2 border-white rounded-full">
           <ion-label class="text-5xl">{{publicProfileService.myPublicProfile?.profileEmoji}}</ion-label>
@@ -33,8 +33,7 @@
     </div>
     <div class="relative w-40 h-40">
       <div class="h-40">
-        <img class="object-cover w-40 h-40 border rounded-full shadow-md border-cyan-200 shadow-cyan-100"
-          src="../../../../assets/test-icons/celeste.png" />
+        <img class="object-cover w-40 h-40 border rounded-full" src="../../../../assets/test-icons/celeste.png" />
         <div class="absolute top-0 right-0 bg-white border-2 border-white rounded-full">
           <ion-label class="text-5xl">{{publicProfileService.myMatePublicProfile?.profileEmoji}}</ion-label>
         </div>
@@ -54,7 +53,8 @@
       <ion-card-content>
         <span
           *ngIf="publicProfileService.myMatePublicProfile?.lastBatteryPercentage && publicProfileService.myMatePublicProfile?.lastBatteryPercentage !== ''">Mon
-          mate a {{publicProfileService.myMatePublicProfile?.lastBatteryPercentage | slice:0:2}} % de batterie</span>
+          mate a {{toDeviceBattery(publicProfileService.myMatePublicProfile?.lastBatteryPercentage).toString()|
+          slice:0:5}} % de batterie</span>
         <span
           *ngIf="!publicProfileService.myMatePublicProfile?.lastBatteryPercentage || publicProfileService.myMatePublicProfile?.lastBatteryPercentage === ''">Batterie
           de mon mate inconnue</span>
@@ -84,21 +84,35 @@
       </ion-card-content>
     </ion-card>
   </div>
+
+  <!-- ? description & contact card -->
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>{{coupleService.myMate?.firstname}} {{coupleService.myMate?.lastname}}</ion-card-title>
+      <ion-card-subtitle>{{publicProfileService.myMatePublicProfile?.description}}</ion-card-subtitle>
+    </ion-card-header>
+  </ion-card>
 </ion-content>
 
 <!-- ? Fab buttons -->
 <ion-fab horizontal="end" vertical="bottom" slot="fixed">
-  <ion-fab-button>
+  <ion-fab-button (click)="onClickFab()">
     <ion-icon name="pencil"></ion-icon>
   </ion-fab-button>
   <ion-fab-list [side]="'top'">
-    <ion-fab-button id="triggerMateNicknameAlert">
+    <ion-fab-button>
+      <ngx-colors ngx-colors-trigger [(ngModel)]="color" (change)="onChangePrimaryColor()"></ngx-colors>
+    </ion-fab-button>
+    <ion-fab-button id="triggermyDescriptionAlert" (click)="onClickFab()">
+      <ion-icon name="document-text-outline"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-button id="triggerMateNicknameAlert" (click)="onClickFab()">
       <ion-icon name="body-outline"></ion-icon>
     </ion-fab-button>
-    <ion-fab-button id="triggerEmojiAlert">
+    <ion-fab-button id="triggerEmojiAlert" (click)="onClickFab()">
       <ion-icon name="bonfire-outline"></ion-icon>
     </ion-fab-button>
-    <ion-fab-button id="triggerCoupleNicknameAlert">
+    <ion-fab-button id="triggerCoupleNicknameAlert" (click)="onClickFab()">
       <ion-icon name="heart-half-outline"></ion-icon>
     </ion-fab-button>
   </ion-fab-list>
@@ -110,4 +124,7 @@
 </ion-alert>
 <ion-alert [animated]="true" header="Donne un nouveau surnom à ton mate !" [buttons]="mateNicknameAlertButtons"
   [inputs]="mateNicknameAlertInputs" trigger="triggerMateNicknameAlert">
+</ion-alert>
+<ion-alert [animated]="true" header="Modifie ta description !" [buttons]="myDescriptionAlertButtons"
+  [inputs]="myMateDescriptionAlertInputs" trigger="triggermyDescriptionAlert">
 </ion-alert>
