--- a/front/src/app/components/pages/my-couple/my-couple.page.html
+++ b/front/src/app/components/pages/my-couple/my-couple.page.html
@@ -1,13 +1,130 @@
+<!-- ? header -->
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>myCouple</ion-title>
+    <ion-title>{{(coupleService.myCouple?.name && coupleService.myCouple?.name !== '') ? coupleService.myCouple!.name :
+      'Mon couple'}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
+<!-- ? full page -->
 <ion-content [fullscreen]="true">
+  <!-- ? header -->
   <ion-header collapse="condense">
+    <!-- ? couple nickname -->
     <ion-toolbar>
-      <ion-title size="large">myCouple</ion-title>
+      <ion-title size="large">{{(coupleService.myCouple?.name && coupleService.myCouple?.name !== '') ?
+        coupleService.myCouple!.name : 'Mon couple'}}</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <!-- ? Pictures -->
+  <div class="flex justify-center w-full pt-5">
+    <div class="relative w-40">
+      <div class="h-40">
+        <img class="object-cover w-full h-full rounded-full"
+          src="../../../../assets/test-icons/benji.png" />
+        <div class="absolute top-0 left-0 bg-white border-2 border-white rounded-full">
+          <ion-label class="text-5xl">{{publicProfileService.myPublicProfile?.profileEmoji}}</ion-label>
+        </div>
+      </div>
+      <div class="pl-2 text-center">
+        <ion-label>{{publicProfileService.myPublicProfile?.nickname ?? 'Donne moi un surnom !'}}</ion-label>
+      </div>
+    </div>
+    <div class="relative w-40 h-40">
+      <div class="h-40">
+        <img class="object-cover w-40 h-40 border rounded-full" src="../../../../assets/test-icons/celeste.png" />
+        <div class="absolute top-0 right-0 bg-white border-2 border-white rounded-full">
+          <ion-label class="text-5xl">{{publicProfileService.myMatePublicProfile?.profileEmoji}}</ion-label>
+        </div>
+      </div>
+      <div class="pl-2 text-center">
+        <ion-label>{{publicProfileService.myMatePublicProfile?.nickname ?? 'Donne à mon mate un surnom !'}}</ion-label>
+      </div>
+    </div>
+  </div>
+
+  <!-- ? Battery card -->
+  <div class="w-full">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Batterie de mon mate</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <span
+          *ngIf="publicProfileService.myMatePublicProfile?.lastBatteryPercentage && publicProfileService.myMatePublicProfile?.lastBatteryPercentage !== ''">Mon
+          mate a {{toDeviceBattery(publicProfileService.myMatePublicProfile?.lastBatteryPercentage).toString()|
+          slice:0:5}} % de batterie</span>
+        <span
+          *ngIf="!publicProfileService.myMatePublicProfile?.lastBatteryPercentage || publicProfileService.myMatePublicProfile?.lastBatteryPercentage === ''">Batterie
+          de mon mate inconnue</span>
+      </ion-card-content>
+    </ion-card>
+  </div>
+
+  <!-- ? sadness (tristoune) count -->
+  <div class="w-full">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Compte de tristoune</ion-card-title>
+        <ion-card-subtitle>À chaque fois que tu es tristoune, clique sur le bouton !</ion-card-subtitle>
+      </ion-card-header>
+      <ion-card-content>
+        <div class="inline-flex w-full">
+          <div class="flex self-center justify-center w-1/5">
+            <ion-chip color="primary" class="">{{publicProfileService.myPublicProfile?.sadness?.length}}</ion-chip>
+          </div>
+          <div class="w-3/5 text-center">
+            <ion-button (click)="onClickSadness()">Je suis tristoune</ion-button>
+          </div>
+          <div class="flex self-center justify-center w-1/5">
+            <ion-chip color="secondary">{{publicProfileService.myMatePublicProfile?.sadness?.length}}</ion-chip>
+          </div>
+        </div>
+      </ion-card-content>
+    </ion-card>
+  </div>
+
+  <!-- ? description & contact card -->
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>{{coupleService.myMate?.firstname}} {{coupleService.myMate?.lastname}}</ion-card-title>
+      <ion-card-subtitle>{{publicProfileService.myMatePublicProfile?.description}}</ion-card-subtitle>
+    </ion-card-header>
+  </ion-card>
 </ion-content>
+
+<!-- ? Fab buttons -->
+<ion-fab horizontal="end" vertical="bottom" slot="fixed">
+  <ion-fab-button (click)="onClickFab()">
+    <ion-icon name="pencil"></ion-icon>
+  </ion-fab-button>
+  <ion-fab-list [side]="'top'">
+    <ion-fab-button>
+      <ngx-colors ngx-colors-trigger [(ngModel)]="color" (change)="onChangePrimaryColor()"></ngx-colors>
+    </ion-fab-button>
+    <ion-fab-button id="triggermyDescriptionAlert" (click)="onClickFab()">
+      <ion-icon name="document-text-outline"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-button id="triggerMateNicknameAlert" (click)="onClickFab()">
+      <ion-icon name="body-outline"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-button id="triggerEmojiAlert" (click)="onClickFab()">
+      <ion-icon name="bonfire-outline"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-button id="triggerCoupleNicknameAlert" (click)="onClickFab()">
+      <ion-icon name="heart-half-outline"></ion-icon>
+    </ion-fab-button>
+  </ion-fab-list>
+</ion-fab>
+<ion-alert [animated]="true" header="Donne un nouveau surnom à ton couple !" [buttons]="coupleNicknameAlertButtons"
+  [inputs]="coupleNicknameAlertInputs" trigger="triggerCoupleNicknameAlert"></ion-alert>
+<ion-alert [animated]="true" header="Donne un nouvel émoji à ton profil !" [buttons]="emojiAlertButtons"
+  [inputs]="emojiAlertInputs" trigger="triggerEmojiAlert">
+</ion-alert>
+<ion-alert [animated]="true" header="Donne un nouveau surnom à ton mate !" [buttons]="mateNicknameAlertButtons"
+  [inputs]="mateNicknameAlertInputs" trigger="triggerMateNicknameAlert">
+</ion-alert>
+<ion-alert [animated]="true" header="Modifie ta description !" [buttons]="myDescriptionAlertButtons"
+  [inputs]="myMateDescriptionAlertInputs" trigger="triggermyDescriptionAlert">
+</ion-alert>
