--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -6,9 +6,9 @@
       <ion-label>Conversation</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="calendars">
-      <ion-img [src]="router.url.includes('calendars') ? calendarsOnIcon : calendarsOffIcon " class="w-1/3" />
-      <ion-label>Calendriers</ion-label>
+    <ion-tab-button tab="moodboard">
+      <ion-img [src]="router.url.includes('moodboard') ? calendarsOnIcon : calendarsOffIcon " class="w-1/3" />
+      <ion-label>Moodboard</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="my-couple">
