--- a/front/src/app/components/pages/moodboard/moodboard.page.html
+++ b/front/src/app/components/pages/moodboard/moodboard.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>moodboard</ion-title>
+    <ion-title>Mon Moodboard</ion-title>
   </ion-toolbar>
 </ion-header>
 
