--- a/front/src/app/components/pages/my-profile/my-profile.page.html
+++ b/front/src/app/components/pages/my-profile/my-profile.page.html
@@ -11,4 +11,7 @@
     </ion-toolbar>
   </ion-header>
   <ion-button (click)="logout()">logout</ion-button>
+  <ion-select (ionChange)="onChangeTimezone($event)" [placeholder]="authService.currentUserSubject.getValue().timezone">
+    <ion-select-option [value]="zone" *ngFor="let zone of allTimezones">{{zone}}</ion-select-option>
+  </ion-select>
 </ion-content>
