--- a/front/src/app/components/moodboard/moodboard-today/moodboard-today.component.html
+++ b/front/src/app/components/moodboard/moodboard-today/moodboard-today.component.html
@@ -1,22 +1,22 @@
 <div class="flex justify-center w-full align-baseline">
   <div class="relative justify-center w-full p-5 pb-2">
-    <img (click)="onClickPicture()" class="object-cover rounded-lg {{who === 'me' ? 'hover:cursor-pointer' : ''}}" (click)="who === 'me' && onAddDayPicture()" [src]="who === 'me' ? daysPicturesService.myTodaysPicture?.value : daysPicturesService.myMatesTodaysPicture?.value" />
-    <div (click)="onClickEmoji();" class="absolute top-0 {{who === 'me' ? 'left-0' : 'right-0'}} bg-white border-2 border-white rounded-full {{who === 'me' ? 'hover:cursor-pointer' : ''}}">
-      <ion-label *ngIf="who === 'me' && daysEmojisService.myTodaysEmoji" class="text-8xl">{{daysEmojisService.myTodaysEmoji.value}}</ion-label>
-      <ion-label *ngIf="who === 'mate' && daysEmojisService.myMatesTodaysEmoji" class="text-8xl">{{daysEmojisService.myMatesTodaysEmoji.value}}</ion-label>
+    <img (click)="onClickPicture()" class="object-cover rounded-lg {{who === 'me' ? 'hover:cursor-pointer' : ''}}"
+      (click)="who === 'me' && onAddDayPicture()"
+      [src]="who === 'me' ? daysPicturesService.myTodaysPicture?.value : daysPicturesService.myMatesTodaysPicture?.value" />
+    <div (click)="onClickEmoji();"
+      class="absolute top-0 {{who === 'me' ? 'left-0' : 'right-0'}} bg-white border-2 border-white rounded-full {{who === 'me' ? 'hover:cursor-pointer' : ''}}">
+      <ion-label *ngIf="who === 'me' && daysEmojisService.myTodaysEmoji"
+        class="text-8xl">{{daysEmojisService.myTodaysEmoji.value}}</ion-label>
+      <ion-label *ngIf="who === 'mate' && daysEmojisService.myMatesTodaysEmoji"
+        class="text-8xl">{{daysEmojisService.myMatesTodaysEmoji.value}}</ion-label>
     </div>
-      <ion-label id="triggerDayEmojiAlert" class="hover:cursor-pointer absolute top-0 {{who === 'me' ? 'left-0' : 'right-0'}} bg-white border-2 border-white rounded-full text-8xl" *ngIf="(who === 'me' && !daysEmojisService.myTodaysEmoji) || (who === 'mate' && !daysEmojisService.myMatesTodaysEmoji)">{{who === 'me' ? '➕' : '❓'}}</ion-label>
+    <ion-label id="triggerDayEmojiAlert"
+      class="hover:cursor-pointer absolute top-0 {{who === 'me' ? 'left-0' : 'right-0'}} bg-white border-2 border-white rounded-full text-8xl"
+      *ngIf="(who === 'me' && !daysEmojisService.myTodaysEmoji) || (who === 'mate' && !daysEmojisService.myMatesTodaysEmoji)">{{who
+      === 'me' ? '➕' : '❓'}}</ion-label>
   </div>
 </div>
-<ion-segment [(ngModel)]="who" (ngModelChange)="onChangeMate(); who === 'me' ? daysEmojisService.getMyTodaysEmoji() : daysEmojisService.getMyMatesTodaysEmoji()">
-  <ion-segment-button value="me">
-    <ion-label>{{publicProfileService.myPublicProfile?.nickname}}</ion-label>
-  </ion-segment-button>
 
-  <ion-segment-button value="mate">
-    <ion-label>{{publicProfileService.myMatePublicProfile?.nickname}}</ion-label>
-  </ion-segment-button>
-</ion-segment>
 <ion-alert *ngIf="who === 'me'" [animated]="true" header="Mets ton emoji du jour !" [buttons]="dayEmojiAlertButtons"
   [inputs]="dayEmojiAlertInputs" trigger="triggerDayEmojiAlert">
 </ion-alert>
