💫 add lottie animaitions

--- a/front/src/app/components/pages/my-couple/my-couple.page.html
+++ b/front/src/app/components/pages/my-couple/my-couple.page.html
@@ -21,8 +21,11 @@
   <div class="flex w-full pt-5 justify-evenly">
     <div class="relative w-40">
       <div class="h-40">
-        <img class="object-cover w-full h-full rounded-full"
-          [src]="publicProfileService.myProfilePicture" (click)="onClickPicture()" />
+        <img class="object-cover w-40 h-40 rounded-full"
+          id="myProfilePicture" loading="lazy"
+          *ngIf="!publicProfileService.loadingMyProfilePicture" [src]="publicProfileService.myProfilePicture"
+          (click)="onClickPicture()" />
+        <ng-lottie *ngIf="publicProfileService.loadingMyProfilePicture" [options]="optionsLottie"></ng-lottie>
         <div class="absolute top-0 left-0 bg-white border-2 border-white rounded-full">
           <ion-label class="text-5xl">{{publicProfileService.myPublicProfile?.profileEmoji}}</ion-label>
         </div>
@@ -33,7 +36,11 @@
     </div>
     <div class="relative w-40 h-40">
       <div class="h-40">
-        <img class="object-cover w-40 h-40 rounded-full" [src]="publicProfileService.myMatesProfilePicture" />
+        <img class="object-cover w-40 h-40 rounded-full"
+          loading="lazy" id="myMatesProfilePicture"
+          [src]="publicProfileService.myMatesProfilePicture" *ngIf="!publicProfileService.loadingMatesProfilePicture"
+          loading="lazy" />
+        <ng-lottie [options]="optionsLottie" *ngIf="publicProfileService.loadingMatesProfilePicture"></ng-lottie>
         <div class="absolute top-0 right-0 bg-white border-2 border-white rounded-full">
           <ion-label class="text-5xl">{{publicProfileService.myMatePublicProfile?.profileEmoji}}</ion-label>
         </div>
